# wiki-rewrite

./: .env.example  .gitignore  Dockerfile  Dockerfile.ml  README.md  app.js  container-up.sh  docker-compose.dev.yml  docker-compose.yml  fetch-exemplars.js  index.html  package-lock.json  package.json  rules.js  server.js  styles.css
ml/: improve.sh  pyproject.toml
ml/corpus-v0/ai/: ahmed-metani.txt  dan-kahn.txt  david-g-ruffer.txt  list-of-works-by-willy-tiedjen.txt  pol-anglada.txt  seed-claude-subtle-bio.txt
ml/corpus-v0/human/: 2019-fa-cup-final.txt  38th-welsh-infantry-division.txt  american-arts-commemorative-series-medallions.txt  apollo-10.txt  argosy-magazine.txt  boeing-c-17-globemaster-iii-in-australian-service.txt  born-to-run.txt  eisenhower-dollar.txt  fourth-test-1948-ashes-series.txt  kaze-to-ki-no-uta.txt  nihonium.txt  seed-ashford-2018.txt  seed-folkestone-2018.txt  seed-moby-dick.txt  sms-l-tzow.txt
ml/manifests/: blocklist.txt  corpus-v0.jsonl  corpus-v1.jsonl
ml/src/wikidetect/: cache.py  calibrate.py  cli.py  config.py  corpus.py  detect.py  exemplars.py  models.py  server.py  stance.py  sweep.py  wiki.py
ml/src/wikidetect/train/: dataset.py  evaluate.py  run.py
ml/tests/: test_score_parity.py  test_wiki.py
ml/tests/fixtures/: classify-cache.json
ml/tests/fixtures/sweeps/: articles-containing-suspected-ai-generated-texts-from-novemb.jsonl  articles-containing-suspected-ai-generated-texts-from-octobe.jsonl
ml/tests/fixtures/wikitext/: ahmed-metani.meta.json  ahmed-metani.region.txt  ahmed-metani.stripped.txt  ahmed-metani.wikitext  (+8 more)
(+68 files in other folders)
