[project]
name = "wikidetect"
version = "0.1.0"
description = "AI-text detection for Wikipedia cleanup: scoring, calibration, sweeps, corpus, training"
requires-python = ">=3.12"
dependencies = [
    # the combination the working detector venv shipped with
    "torch>=2.12,<2.13",
    "transformers>=5.13,<6",
    "safetensors",
    "sentencepiece",
    "protobuf",
    "huggingface-hub",
    "httpx",
]

[project.optional-dependencies]
train = ["peft>=0.14"]
dev = ["pytest"]

[project.scripts]
wikidetect = "wikidetect.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wikidetect"]
